<?xml version="1.0"?>
<package>
  <name>crab_hexapod</name>
  <version>0.1.0</version>
  <description>
      Crab hexapod robot metapackage.
  </description>

  <maintainer email="huaibovip@gmail.com">Charles</maintainer>
  <license>GPLv3</license>
  <author email="huaibovip@gmail.com">Charles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <export><metapackage/></export>
</package>