<?xml version="1.0"?>
<package>
  <name>crab_msgs</name>
  <version>0.1.0</version>
  <description>The crab_msgs package</description>

  <maintainer email="huaibovip@gmail.com">Charles</maintainer>
  <license>GPLv3</license>
  <author email="huaibovip@gmail.com">Charles</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
